--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
         <script defer src="js/script.js"></script>
     </head>
     <body>
-        <div class="train_ticket">
+        <div class="train_ticket p-2 m-2">
             <h1>Biglietto del treno</h1>
-            <div>Distance: <span id="distance"></span></div>
+            <div>Distance: <span id="distance"></span>km</div>
             <div>Age: <span id="age"></span></div>
-            <div>Price: <span id="price"></span></div>
-            <div class="sale"></div>
-            <div id="price_saled"></div>
+            <div class="ticket_prices">
+                <div>Price: <span id="price"></span>€</div>
+                <div id="sale"></div>
+                <div id="price_saled"></div>
+            </div>
         </div>
     </body>
 </html>
